--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,10 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: Inter, ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji";
 }
 
 .rodal,
@@ -59,6 +63,6 @@ a {
   -ms-flex-pack: center;
   justify-content: center;
   position: relative !important;
-  width: 32em;
-  max-width: 100%;
+  width: fit-content;
+  /* max-width: 100%; */
 }
