--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,12 @@ a {
   box-sizing: border-box;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+body {
+  font-family: Inter, serif !important;
+}
+
 .rodal,
 .rodal-mask {
   display: -webkit-box;
@@ -59,6 +65,6 @@ a {
   -ms-flex-pack: center;
   justify-content: center;
   position: relative !important;
-  width: 32em;
+  width: fit-content;
   max-width: 100%;
 }
